<resources>
    <string name="app_name">카풀</string>
    <string name="menu_alert">알림함</string>
    <string name="menu_chat">채팅</string>
    <string name="menu_unit_info">부대 정보</string>
    <string name="menu_unit_list">부대 목록</string>
    <string name="menu_setting">설정</string>
    <string name="menu_logout">로그아웃</string>
    <string name="menu_unit_info_sign_out">탈퇴</string>
    <string name="menu_unit_info_name_change">이름 변경</string>
    <string name="menu_unit_info_dispose">해체</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_head_text">님 환영합니다.</string>
    <string name="str_done">완료</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_carpool_make">카풀 등록</string>

    <string name="backdrop_title">카풀</string>
    <string name="backdrop_subtitle">군 카풀 서비스</string>

    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">회원이 아니신가요?</string>
    <string name="btn_link_to_login">이미 가입되어있습니다.</string>

    <string name="btn_forgot_password">비밀번호 찾기</string>
    <string name="btn_reset_password">비밀번호 초기화</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="action_sign_in_short">가입</string>

    <!-- Strings related to login -->
    <string name="unit_name">상세정보</string>
    <string name="action_make">생성</string>
    <string name="label_unitcategory">상급 부대 : </string>
    <string name="label_unitname">상세 부대명 : </string>
    <string name="prompt_email">이메일</string>
    <string name="prompt_name">이름</string>
    <string name="prompt_group">소속</string>
    <string name="prompt_rank">계급</string>
    <string name="prompt_phone">전화번호(-포함)</string>
    <string name="prompt_using_car">차 소유 여부</string>
    <string name="prompt_password">비밀번호(6자리 이상)</string>
    <string name="prompt_password_confirm">비밀번호 확인</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_up">회원가입</string>
    <string name="error_invalid_email">잘못된 이메일입니다.</string>
    <string name="error_invalid_password">비밀번호가 짧습니다.</string>
    <string name="error_comfirmation_password">비밀번호가 다릅니다.</string>
    <string name="error_incorrect_password">비밀번호가 올바르지 않습니다.</string>
    <string name="error_field_required">칸이 비어있습니다.</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>

    <string name="activity_color_picker_confirm_save_message">Saved</string>

    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_make_unit">MakeUnit</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- View color item list page -->
    <string name="title_activity_sign_up">Sign Up</string>

    <string name="sign_out">Sign Out</string>

    <string name="title_activity_add_unit">AddUnitActivity</string>
    <string name="title_activity_carpool_list_ativity">CarpoolListAtivity</string>
    <string name="make_carpool_title">카풀 등록</string>
    <string name="title_activity_alert">알림함</string>
    <string name="lvItem_start">출발</string>
    <string name="lvItem_end">도착</string>
    <string name="title_activity_unit_info">UnitInfoActivity</string>
</resources>
