<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_alert"
        android:icon="@drawable/ic_menu_send"
        android:title="@string/menu_alert" />
    <item
        android:id="@+id/nav_chat"
        android:title="@string/menu_chat" />
    <item
        android:id="@+id/nav_unit_info"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/menu_unit_info" />
    <item
        android:id="@+id/nav_unit_list"
        android:title="@string/menu_unit_list" />
    <item
        android:id="@+id/nav_setting"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/menu_setting" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/googleg_standard_color_18"
        android:title="@string/menu_logout" />

</menu>